[package]
name = "pacfilter"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anstyle = "1.0"
anstream = "0.6"
ahash = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
